--- a/Proyecto-Desglose-de-Torres/vercel.json
+++ b/Proyecto-Desglose-de-Torres/vercel.json
@@ -1,11 +1,11 @@
 {
   "version": 2,
-  "builds": [
-    { "src": "index.js", "use": "@vercel/node" },
-    { "src": "public/**/*", "use": "@vercel/static" }
-  ],
+  "functions": {
+    "index.js": {
+      "runtime": "nodejs20.x"
+    }
+  },
   "routes": [
-    { "src": "/api/(.*)", "dest": "/index.js" },
     { "src": "/calculadora", "dest": "/index.js" },
     { "src": "/", "dest": "/index.js" },
     { "src": "/(.*)", "dest": "/public/$1" }
