--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "version": 2,
-  "buildCommand": "cd 'Proyecto Desglose de Torres nextjs' && npm run build",
-  "outputDirectory": "Proyecto Desglose de Torres nextjs/.next",
+  "buildCommand": "npm run build",
+  "outputDirectory": ".next",
   "framework": "nextjs"
 }
