acambie algo en .env.local

--- a/.env.local
+++ b/.env.local
@@ -1,1 +1,1 @@
-mongodb+srv://martinp_db:c51ObWgDOgN1KTOw@desglosetorres.js1iput.mongodb.net//torres?retryWrites=true&w=majority
+MONGODB_URI=mongodb+srv://martinp_db:c51ObWgDOgN1KTOw@desglosetorres.js1iput.mongodb.net//torres?retryWrites=true&w=majority
