--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "migrate": "node migrate-to-mongodb.js"
   },
   "dependencies": {
-    "mongodb": "^7.0.0",
+    "mongodb": "^6.3.0",
     "next": "^14.2.0",
     "react": "^18.3.0",
     "react-dom": "^18.3.0"
